--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,4 +22,12 @@
     <string name="customisation_lockscreen">Lockscreen</string>
     <string name="customisation_extras">Extras</string>
 
+    <!-- Power Menu -->
+    <string name="hardware_keys_power_category">Power Button</string>
+    <string name="powermenu_title">Power Menu</string>
+    <string name="powermenu_summary">Customize elements to be displayed in power menu</string>
+    <string name="powermenu_reboot_title">Reboot</string>
+    <string name="powermenu_advanced_reboot_title">Advanced Reboot</string>
+    <string name="powermenu_lockdown">Lockdown</string>
+    <string name="powermenu_screenshot_title">Screenshot</string>
 </resources> 
