--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,8 +15,10 @@
 
 <resources>
 
+    <!-- Title -->
     <string name="customisation_settings_title">Pixelizer</string>
 
+    <!-- Categories -->
     <string name="customisation_statusbar">Status Bar</string>
     <string name="customisation_qs">QS</string>
     <string name="customisation_lockscreen">Lockscreen</string>
@@ -30,4 +32,8 @@
     <string name="powermenu_advanced_reboot_title">Advanced Reboot</string>
     <string name="powermenu_lockdown">Lockdown</string>
     <string name="powermenu_screenshot_title">Screenshot</string>
+
+    <!-- Navbar -->
+    <string name="navigation_bar_inverse_title">Swap buttons</string>
+    <string name="navigation_bar_inverse_summary">Swap the order of recents and back buttons</string>
 </resources> 
