--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,4 +35,12 @@
     <!-- Navbar -->
     <string name="navigation_bar_inverse_title">Swap buttons</string>
     <string name="navigation_bar_inverse_summary">Swap the order of recents and back buttons</string>
-</resources> 
+
+    <!-- Network traffic -->
+    <string name="traffic_title">Traffic indicators</string>
+    <string name="traffic_summary">Enable or disable network speed indicators</string>
+    <string name="network_traffic_title">Network traffic</string>
+    <string name="network_traffic_state_title">Show net speed in statusbar</string>
+    <string name="network_traffic_autohide_threshold_title">Net speed autohide threshold (KB/s)</string>
+    <string name="network_traffic_notch_info">Devices with notch may show the indicator only when the status bar is expanded, depending on the size of the notch and available space in status bar</string>
+</resources>
