Pixelizer: Statusbar brightness control [2/2]
Signed-off-by: KostyaJRZ <jrzroyale@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -56,4 +56,8 @@
     <string name="lockscreen_gesture_title">Gestures</string>
     <string name="double_tap_to_sleep_lockscreen_title">Double tap to sleep</string>
     <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
+
+    <!-- Brightness control -->
+    <string name="status_bar_toggle_brightness">Brightness control</string>
+    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
 </resources>
